# diy_transformer

./: README.md  pyproject.toml
diy_transformer/: transformer.md  transformer.py
diy_transformer/cleaned/: class_diagram.md  decoder.py  decoder_block.py  encoder.py  encoder_block.py  feed_forward_block.py  input_embeddings.py  inupt_embeddings.py  layer_normalization.py  main.py  multi_head_attention_block.py  multi_head_attn_block.py  positional_encoding.py  projection_layer.py  residual_connection.py  transformer.py
original/: class_diagram.md  config.py  dataset.py  model.py  train.py
